** Known BREAKING CHANGES from NH3.1.0.GA to NH3.2.0.GA
	##### Design time #####
		* removed obsolete "use_outer_join" property from nhibernate-configuration.xsd (simply remove it from your xml configuration)

	##### Possible Breaking Changes #####
		* All Dialect.GetLimitString() methods replaced with a single GetLimitString method with a new signature.
		* [NH-2550] - Allow public access to FieldInterceptor Session (IFieldInterceptor changed)
		* [NH-2593] - For Microsoft SQL Server the default batch-size (adonet.batch_size) is set to 20 where not explicit defined in the session-factory configuration
		* - ICollectionPersister added property to fix [NH-2489]
		* [NH-2605] Refactorize MultiQuery/MultiCriteria implementation to delegate responsibility to IDrive (IDrive changed).
		* For users who don't look at Log-ERROR, to prevent wrong behavior when lazy-properties are used the DynamicProxyValidator validates the accessability of properties setters.
		* For those implementing IDrive without inherit from DriveBase: IDrive.AdjustCommand

Build 3.2.0.Beta1 (rev5839)
=============================
** Bug
    * [NH-2404] - Future queries crash (MultiQuery) when using projection queries using hql + result transformer or the linq provider (which compiles into hql) 
    * [NH-2421] - NotSupportedException text in ToFuture and ToFutureValue does not make sense (or help)
    * [NH-2422] - ToFuture throws NotSupportedException on IQueryable if Fetch is used.
    * [NH-2559] - NH 3.0 Linq Provider : Issue using multiple filters on the same entity
    * [NH-2615] - Linq Fetch cannot traverse through components
    * [NH-2690] - Linq Select() broken with .ToFuture()
    * [NH-2691] - Linq LongCount() behavior different from Count()
    * [NH-2697] - Named parameter not found in HQL with mapping using "entity-name"
    * [NH-2698] - Proxying fails for methods with generic type constraints

** Improvement